# ChangeLog for net-print/cups
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/cups/ChangeLog,v 1.404 2011/02/28 17:58:36 ssuominen Exp $

  28 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> cups-1.3.11-r4.ebuild:
  Use virtual/jpeg.

*cups-1.4.6 (13 Jan 2011)

  13 Jan 2011; Timo Gurr <tgurr@gentoo.org> -cups-1.4.4-r2.ebuild,
  -cups-1.4.5.ebuild, +cups-1.4.6.ebuild, +files/cups-1.4.6-force-gnutls.patch,
  +files/cups-1.4.6-serialize-gnutls.patch:
  Version bump, fixing bug #313555 and #350406. Remove old.

*cups-1.3.11-r4 (01 Dec 2010)

  01 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org> -cups-1.3.11-r2.ebuild,
  -cups-1.3.11-r3.ebuild, +cups-1.3.11-r4.ebuild,
  +files/cups-1.3.11-pdf-m4.patch:
  Revision bump (directly stable) to fix nasty issue with pstopdf buildtime
  requirement (only changed the m4 to work properly).

*cups-1.4.5 (01 Dec 2010)

  01 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org> +cups-1.4.5.ebuild:
  Version bump

*cups-1.3.11-r3 (12 Nov 2010)

  12 Nov 2010; Raúl Porcel <armin76@gentoo.org> -cups-1.3.11-r1.ebuild,
  +cups-1.3.11-r3.ebuild:
  Fix super annoying bug 309901

  12 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org> cups-1.4.4-r2.ebuild,
  +files/cups-1.4.4-perl-includes.patch:
  Fix building with perl useflag enabled. Per bug #336839.

*cups-1.4.4-r2 (11 Sep 2010)

  11 Sep 2010; Timo Gurr <tgurr@gentoo.org> -cups-1.4.4.ebuild,
  -cups-1.4.4-r1.ebuild, +cups-1.4.4-r2.ebuild,
  +files/cups-1.4.4-dont-compress-manpages.patch,
  +files/cups-1.4.4-fix-install-perms.patch,
  +files/cups-1.4.4-nostrip.patch, +files/cups-1.4.4-php-destdir.patch:
  Revbump, fixing bug #296221.

  10 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org> cups-1.4.4-r1.ebuild:
  Revision bump again. This time with mimimalistic patches only altering
  build. Feel free to rework them.

  13 Aug 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -cups-1.4.4-r1.ebuild: