@@ -1,6 +1,9 @@
 # ChangeLog for net-print/lprng
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/lprng/ChangeLog,v 1.56 2008/11/03 22:14:42 dirtyepic Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/lprng/ChangeLog,v 1.57 2011/03/19 17:54:50 ssuominen Exp $
+
+  19 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> lprng-3.8.28.ebuild:
+  Move virtual/lpr to new-style virtual.
 
   03 Nov 2008; Ryan Hill <dirtyepic@gentoo.org> -lprng-3.8.27-r1.ebuild,
   lprng-3.8.28.ebuild:
