@@ -1,6 +1,10 @@
 # ChangeLog for net-print/cups
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/cups/ChangeLog,v 1.404 2011/02/28 17:58:36 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/cups/ChangeLog,v 1.405 2011/03/19 17:54:11 ssuominen Exp $
+
+  19 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> cups-1.3.11-r4.ebuild,
+  cups-1.4.6.ebuild:
+  Move virtual/lpr to new-style virtual.
 
   28 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> cups-1.3.11-r4.ebuild:
   Use virtual/jpeg.
